input, select/option & css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>template</title>
+        <title>Movie Rate</title>
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width, initial-scale = 1.0'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -11,7 +11,18 @@
     </head>
     
 <body>
+    <div id='wrapper'>
+        <h1 id='title'>Type in a film name and select a star ratin</h1>
+        <input type='text' />
+        <select>
+            <option>1 star</option>
+            <option>2 star</option>
+            <option>3 star</option>
+            <option>4 star</option>
+            <option>5 star</option>
 
+        </select>
+    </div>
     
 <script
   src="https://code.jquery.com/jquery-3.3.1.js"
